Fix for origin spoofing due to overflowing text not wrapped

--- a/app/App/Panel/Main/Signer/Requests/style/index.styl
+++ b/app/App/Panel/Main/Signer/Requests/style/index.styl
@@ -338,6 +338,9 @@
       width 300px
       text-align center
       transform translateZ(0px)
+      direction rtl
+      text-overflow ellipsis
+      overflow hidden
 
     .requestProviderOrigin18
       font-size 17
