--- a/app/App/Panel/Main/Signer/Settings/style/index.styl
+++ b/app/App/Panel/Main/Signer/Settings/style/index.styl
@@ -75,6 +75,11 @@
 
   .signerPermissionOrigin
     background transparent
+    width 250px
+    direction rtl
+    text-overflow ellipsis
+    overflow hidden
+    text-align left
 
   .signerPermissionToggle
     position relative
@@ -84,6 +89,7 @@
     border-radius 10px
     transition standard
     transform translateZ(0)
+    margin-top 2px
 
     .signerPermissionToggleSwitch
       position absolute
